--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -58,5 +58,6 @@
 
   &__button {
     margin-top: 32px;
+    color: $color-black !important;
   }
 }
