--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -59,10 +59,7 @@ h1 {
   width: 100px;
   height: 34px;
   border-radius: 80px;
-  -webkit-appearance: none; // For Safari
-  -moz-appearance: none; // For Firefox
-  appearance: none;
-  -webkit-tap-highlight-color: transparent; // Remove iOs tap highlights
+  color: $color-black;
 
   &:hover {
     background-color: $color-yellow-100;
